<resources>
    <string name="app_name">骑士</string>

    <!-- 启动页 -->
    <string name="splash_title">AgileDevKt测试工程</string>
    <string name="splash_check_permission_tips">请在权限页面打开应用所有权限</string>
    <string name="splash_check_permission_title">请确认已打开该应用使用的所有权限</string>
    <string name="splash_check_permission_confirm">已确认</string>
    <string name="splash_check_permission_unconfirmed">再次确认</string>
    <string name="splash_check_permission_cancel">请在设置中打开权限后重启应用</string>
    <string name="login_password">密码</string>
    <string name="login_account">账号</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register_account">注册账号</string>
    <string name="login_visitors_login">游客登录</string>
    <string name="login_login">登录</string>
    <string name="menu_home">首页</string>
    <string name="menu_roadBook">路书</string>
    <string name="menu_map">地图</string>
    <string name="menu_mine">我的</string>
    <string name="menu_ride">骑行</string>

</resources>